new proj/src/objects/GE_ES_Preapproved_Risk_Factor__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_ES_Risk_Factor_Name__c</fullName>
        <formula>GE_ES_Risk_Factor__r.GE_ES_Risk_Factor_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Factor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Risk_Factor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Factor</label>
        <referenceTo>GE_ES_Risk_Factor__c</referenceTo>
        <relationshipLabel>Preapproved Risk Factors</relationshipLabel>
        <relationshipName>Preapproved_Risk_Factors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Risk_Filter_PL_Configuration__c</fullName>
        <label>Risk Filter P&amp;L Configuration</label>
        <referenceTo>GE_ES_Risk_Filter_PL_Configuration__c</referenceTo>
        <relationshipLabel>Preapproved Risk Factors</relationshipLabel>
        <relationshipName>GE_ES_Preapproved_Risk_Factors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Preapproved Risk Factor</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Preapproval Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preapproved Risk Factors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>